@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Mon, Apr 6, 2009
 ---------------------------------------------------------------------
 - Introduced called_from_(index|landing)_page? helpers.
+- A couple of bug fixes (hiding [Lead Convert] and handling HTTP :delete).
 
 Sun, Apr 5, 2009
 ---------------------------------------------------------------------
